--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "homepage": "https://github.com/armynante/hey-pi#readme",
   "dependencies": {
+    "bcrypt": "^0.8.5",
+    "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "json-web-token": "^1.5.3",
     "mongodb": "^2.0.46",
+    "morgan": "^1.6.1",
     "shelljs": "^0.5.3",
     "underscore": "^1.8.3"
   },
