--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
-    "json-web-token": "^1.5.3",
+    "jsonwebtoken": "^5.4.1",
     "mongodb": "^2.0.46",
     "morgan": "^1.6.1",
     "shelljs": "^0.5.3",
