--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A CLI tool for deploying an auto generated API for your projects",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d dist -w -s"
+    "build": "babel src -d dist -w -s wacthify"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^5.4.1",
     "mongodb": "^2.0.46",
     "morgan": "^1.6.1",
