--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "dependencies": {
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.1",
+    "emailjs": "^1.0.0",
     "express": "^4.13.3",
     "jsonwebtoken": "^5.4.1",
     "mongodb": "^2.0.46",
     "morgan": "^1.6.1",
+    "nodemailer": "^1.10.0",
     "shelljs": "^0.5.3",
     "underscore": "^1.8.3"
   },
